--- a/CursoDesignPatterns/CursoDesignPatterns.csproj
+++ b/CursoDesignPatterns/CursoDesignPatterns.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Strategy\" />
+    <Folder Include="Strategy\CalculadorImpostos\" />
+  </ItemGroup>
 </Project>
