Implementação do padrão de projeto Strategy - realizador de investimentos
Implementação de um programa  que simula investimentos.

--- a/CursoDesignPatterns/CursoDesignPatterns.csproj
+++ b/CursoDesignPatterns/CursoDesignPatterns.csproj
@@ -6,7 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Strategy\" />
-    <Folder Include="Strategy\CalculadorImpostos\" />
+    <Folder Include="Strategy\RealizadorInvestimentos\" />
   </ItemGroup>
 </Project>
